test/langtools/tools/javac/valhalla/lworld-values/ValueAnnotationTest.out
ValueAnnotationTest.java:25:1: compiler.err.illegal.combination.of.modifiers: interface, inline
ValueAnnotationTest.java:9:1: compiler.err.value.may.not.extend
ValueAnnotationTest.java:13:1: compiler.err.empty.value.not.yet
ValueAnnotationTest.java:20:9: compiler.err.cant.assign.val.to.final.var: x
4 errors
